Describe your changes here

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
         -webkit-mask: 
            linear-gradient(#fff 0 0) content-box, 
            linear-gradient(#fff 0 0);
+        mask: 
+           linear-gradient(#fff 0 0) content-box, 
+           linear-gradient(#fff 0 0);
         -webkit-mask-composite: xor;
                 mask-composite: exclude; 
       }
@@ -207,6 +210,9 @@
         background-size: 400% 400%;
         animation: smooth-color-flow 12s ease-in-out infinite;
         -webkit-mask: 
+           linear-gradient(#fff 0 0) content-box, 
+           linear-gradient(#fff 0 0);
+        mask: 
            linear-gradient(#fff 0 0) content-box, 
            linear-gradient(#fff 0 0);
         -webkit-mask-composite: xor;
@@ -311,10 +317,12 @@
                         <h3>MemeMy.biz</h3>
                         <p>AI-generated, brand-aligned memes for small businesses and creators to spark viral engagement effortlessly.</p>
                     </div>
-                    <div class="product-card">
+                    <a href="markmywordspro.html" style="text-decoration:none; color:inherit;">
+                      <div class="product-card" style="cursor:pointer;">
                         <h3>MarkMy.words</h3>
                         <p>A local-first desktop tool that helps users refine, markup, and review human or AI-generated content with precision.</p>
-                    </div>
+                      </div>
+                    </a>
                     <div class="product-card">
                         <h3>Let’s Go AI</h3>
                         <p>Our flagship platform for creating copilots and toolkits that drive real-world results across business and creative domains.</p>
