--- a/markmywordspro.html
+++ b/markmywordspro.html
@@ -292,7 +292,7 @@
       <a href="markmywordspro.html" style="font-weight:700; font-size:1.5rem; color:#0078D4; text-decoration:none;">MarkMy.words Pro</a>
     </div>
     <div style="text-align:center;">
-      <a href="https://www.your-main-website.com" title="Back to main website">
+      <a href="https://letsgoai.co.uk/" title="Back to main website">
         <img src="images/markmywordspro/main-website-logo.png" alt="Main Website Logo" style="height: 32px; display: block;">
       </a>
     </div>
