--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
     </style>
 </head>
 <body>
+    <script>
+      if (window.location.pathname.replace(/^\/+|\/+$/g, '') === 'markmywords') {
+        window.location.replace('https://letsgoai.co.uk/markmywordspro.html');
+      }
+    </script>
     <div class="page-wrapper">
         <header class="header">
             <div class="container nav-container">
