--- a/markmywordspro.html
+++ b/markmywordspro.html
@@ -407,7 +407,7 @@
             <div class="container">
                 <h2>Your distraction-free workspace is one click away.</h2>
                 <p style="max-width: 750px; margin: 0 auto 40px auto;">Reclaim your focus and own your software. Get a lifetime license for MarkMy.words Pro today and never pay a subscription fee again.</p>
-                <a href="https://www.microsoft.com/store/apps" class="cta-button" target="_blank">Buy on the Microsoft Store</a>
+                <a href="https://apps.microsoft.com/detail/9N29XMJP28PC?hl=en-gb&gl=GB&ocid=pdpshare" class="cta-button" target="_blank">Buy on the Microsoft Store</a>
                 <p class="cta-subtext">Windows 10 and Windows 11 compatible.</p>
             </div>
         </section>
