--- a/markmywordspro.html
+++ b/markmywordspro.html
@@ -314,7 +314,7 @@
             </div>
             <h1>Own Your Words. Forever.</h1>
             <p class="sub-headline">MarkMy.words Pro is the premium, distraction-free Markdown editor designed for professionals who value privacy, productivity, and permanence.</p>
-            <a href="https://www.microsoft.com/store/apps" class="cta-button" target="_blank">Buy on the Microsoft Store</a>
+            <a href="https://apps.microsoft.com/detail/9n29xmjp28pc?hl=en-gb&gl=GB&ocid=pdpshare" class="cta-button" target="_blank">Buy on the Microsoft Store</a>
             <p class="cta-subtext">One-time purchase. Lifetime license.</p>
             <div class="usp-bar">
                 <span>✓ NO SUBSCRIPTIONS</span>
