--- a/index.html
+++ b/index.html
@@ -310,23 +310,24 @@
                 </div>
             </section>
 
-            <section id="products" class="container">
-                <h2>Our Portfolio</h2>
+            <section id="focus" class="container">
+                <h2>Our Focus</h2>
+                <p style="text-align:center; color: var(--muted-foreground); max-width: 900px; margin: -2rem auto 3rem; font-size: 1.15rem;">
+                  We are building a portfolio of ventures focused on practical AI solutions. Our primary areas of interest include:
+                </p>
                 <div class="products-grid">
                     <div class="product-card">
-                        <h3>MemeMy.biz</h3>
-                        <p>AI-generated, brand-aligned memes for small businesses and creators to spark viral engagement effortlessly. MemeMy.biz is a subsidiary brand within the Let's Go AI Ltd portfolio.</p>
+                        <h3>AI-Powered SaaS</h3>
+                        <p>Businesses that leverage artificial intelligence to create scalable, high-value Software-as-a-Service products for niche markets.</p>
                     </div>
                     <div class="product-card">
-                        <h3>Let's Go PR</h3>
-                        <p>An innovative AI-powered platform for PR campaigns. Let's Go PR is a subsidiary company within the Let's Go AI Ltd portfolio.</p>
+                        <h3>Developer Tools &amp; Automation</h3>
+                        <p>Innovative tools and platforms that empower developers to build, test, and deploy software more efficiently using AI.</p>
                     </div>
-                    <a href="markmywordspro.html" style="text-decoration:none; color:inherit;">
-                      <div class="product-card" style="cursor:pointer;">
-                        <h3>MarkMy.Words</h3>
-                        <p>A powerful application for the Windows Store. MarkMy.Words is an asset owned and managed by Let's Go AI Ltd.</p>
-                      </div>
-                    </a>
+                    <div class="product-card">
+                        <h3>Applied AI for Professionals</h3>
+                        <p>Applications that assist professionals in creative, technical, and administrative fields to augment their skills and automate complex tasks.</p>
+                    </div>
                 </div>
             </section>
         </main>
@@ -339,9 +340,9 @@
                      <a href="#">LinkedIn</a>
                      <a href="privacy.html">Privacy Policy</a>
                 </div>
-                <p class="copyright">&copy; 2025 Let's Go AI Limited. All Rights Reserved.</p>
-                <p class="copyright">Registered in England and Wales No. [Your Company Number - pending]</p>
-                <p class="copyright">Registered Office: [Your Full Virtual Office Address]</p>
+                <p class="copyright">© 2025 LET’S GO AI LIMITED. All Rights Reserved.</p>
+                <p class="copyright">Registered in England and Wales No. 16688179</p>
+                <p class="copyright">Registered Office: 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ</p>
             </div>
         </footer>
     </div>
