--- a/markmywordspro.html
+++ b/markmywordspro.html
@@ -417,10 +417,10 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <p>© 2024 MarkMy.words Pro. All rights reserved.</p>
-            <p>
-                <a href="markmywordspro_privacy.html">Privacy Policy</a>
-            </p>
+            <p><a href="markmywordspro_privacy.html">Privacy Policy</a></p>
+            <p>© 2025 LET’S GO AI LIMITED. All Rights Reserved.</p>
+            <p>Registered in England and Wales No. 16688179</p>
+            <p>Registered Office: 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ</p>
         </div>
     </footer>
 
