--- a/privacy.html
+++ b/privacy.html
@@ -137,9 +137,9 @@
                  <a href="#">LinkedIn</a>
                  <a href="privacy.html">Privacy Policy</a>
             </div>
-            <p class="copyright">&copy; 2025 Let's Go AI Limited. All Rights Reserved.</p>
-            <p class="copyright">Registered in England and Wales No. [Your Company Number - pending]</p>
-            <p class="copyright">Registered Office: [Your Full Virtual Office Address]</p>
+            <p class="copyright">© 2025 LET’S GO AI LIMITED. All Rights Reserved.</p>
+            <p class="copyright">Registered in England and Wales No. 16688179</p>
+            <p class="copyright">Registered Office: 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ</p>
         </div>
     </footer>
 </body>
